<resources>
    <string name="app_name">Supet</string>
    <string name="home_icon">Home</string>
    <string name="person_icon">Perfil</string>
    <string name="calendar_icon">Calendario</string>
    <string name="add">Add</string>
    <string name="reg_txv">Complete los siguientes datos:</string>
    <string name="reg_name">Nombre usuario</string>
    <string name="reg_petName">Nombre mascota</string>
    <string name="reg_email">Correo</string>
    <string name="reg_pass1">Contraseña</string>
    <string name="reg_pass2">Repita la contraseña</string>
    <string name="reg_btn">Registrar</string>
    <string name="reg_txv2">¿Ya tiene cuenta?</string>
    <string name="reg_login">Inicie sesión</string>
    <string name="image">Perro jugando</string>
    <string name="login_txv">Iniciar sesión para continuar</string>
    <string name="login_forget">¿Olvidó su contraseña?</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="login_txv2">¿No tiene cuenta?</string>
    <string name="login_register">Regístrese</string>
    <string name="logout_btn">Logout</string>
    <string name="scrollview">Scroll View</string>
    <string name="crear_title">Información Tarjeta</string>
    <string name="crearPetInfo_titulo">Título</string>
    <string name="crearPetInfo_description">Descripción </string>
    <string name="crearPetInfo_btn">Crear </string>
    <string name="google_signIn">Inicie sesión con Google</string>

    <!--Fragment-->
    <string name="home_fragment">Home fragment</string>
    <string name="calendar_fragment">¿Quieres crear alguna notificación?</string>
    <string name="calendar_notif">Notificación icono</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="calendar_btn">Crear Evento</string>
    <string name="profile_pic">Imagen de perfil</string>
    <string name="profile_petName">Nombre mascota</string>
    <string name="profile_logout">¿Seguro que quieres cerrar sesión?</string>
    <string name="home_add">Agregar tarea</string>
    <string name="home_petNameCard">Mascota: </string>
    <string name="home_titleCard">Título: </string>
    <string name="home_descriptionCard">Descripción: </string>
    <string name="lorem_ipsum">Lorem ipsum sdnfsinf sduf sinfisnf siudhf si isud iushdf iushfiush dfiushdiuhsiuh ihusd</string>
    <string name="home_ejemploPetName">Dana</string>
    <string name="home_ejemploTitle">Vacuna Rabia</string>

</resources>