<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="16dp"
    android:layout_margin="16dp"
    android:backgroundTint="@color/pastel_brown">

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_petNameCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_petNameCard"
                android:textColor="@color/indian_red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/petNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/home_ejemploPetName"
                android:textColor="@color/dark_brown"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_titleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_titleCard"
                android:textColor="@color/indian_red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titleCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/home_ejemploTitle"
                android:textColor="@color/dark_brown"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_descriptionCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_descriptionCard"
                android:textColor="@color/indian_red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptionCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/lorem_ipsum"
                android:textColorHint="@color/dark_brown"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>