<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".petInfo.CreatePetInfo">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_crearPetInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/crearPetInfo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/crear_title"
                android:textColor="@color/indian_red"
                android:textSize="40sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/crearPetInfo_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:text="@string/reg_txv"
                android:textColor="@color/dark_brown"
                android:textColorHint="@color/dark_brown"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/createPetInfo_petName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_pets_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/reg_petName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/dark_brown"
                android:textColorHint="@color/dark_brown"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/createPetInfo_titleCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_edit_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/crearPetInfo_titulo"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/dark_brown"
                android:textColorHint="@color/dark_brown"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/createPetInfo_description"
                android:layout_width="338dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_description_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/crearPetInfo_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="6dp"
                android:textColorHint="@color/dark_brown"
                tools:ignore="TouchTargetSizeCheck"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/createPetInfo_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:minHeight="48dp"
                android:text="@string/crearPetInfo_btn"
                android:textColor="@color/cream"
                android:textSize="20sp"
                android:layout_margin="16dp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>